--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "@socket.io/redis-adapter": "^7.1.0",
+    "alert": "^5.1.1",
+    "body-parser": "^1.20.0",
     "dotenv": "^14.3.2",
+    "ejs": "^3.1.8",
     "express": "^4.17.1",
+    "hbs": "^4.2.0",
     "moment": "^2.24.0",
+    "mongoose": "^6.5.2",
+    "popups": "^1.1.3",
     "redis": "^4.0.2",
     "socket.io": "^4.4.1"
   },
